--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,8 +12,9 @@
     <string name="password">Password</string>
     <string name="email">Email</string>
 
-    <!--START-->
     <string name="sign_in_description_text">Enter your name, email id and password, to register with us.</string>
-    <!--END-->
+
+    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
+    <string name="please_wait">Please Wait&#8230;</string>
 
 </resources>
